<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">护理工作间</string>
    <string name="version">1.0</string>

    <!-- dialog -->
    <string name="str_loading">加载中</string>
    <!-- 主页 -->
    <string name="str_press_again_to_exit">再按一次退出应用</string>
    <string name="picture_upload_fail">图片上传失败,请稍后重试</string>
    <string name="str_tab_home">消息</string>
    <string name="str_tab_shop">工作间</string>
    <string name="str_tab_descover">小蜘蛛</string>
    <string name="str_tab_study">学习</string>
     <string name="str_tab_zhidao">问答</string>
    
    <string name="str_tab_setting">我</string>
    <string name="str_account_settings">账号设置</string>
    <string name="str_account_security">账号安全</string>
    <string name="str_load">登录</string>
    <string name="no_data">暂无数据</string>
    <!-- 图片 -->
    <string name="photo_folder_num">张</string>
    <string name="photo_folder_max_num">最多可上传</string>
    <string name="photo_folder_max_num_pic">张图片</string>
    <string name="photo_folder_choice">请选择相册</string>
    <string name="photo_folder_choice_zero">已选择0张</string>
    <string name="photo_folder_choice_success">完成</string>
    <string name="photo_folder_choice_cancle">取消</string>
    <string name="photo_folder_choice_ready">已选择</string>
    <string name="poi_list_no_data">未能找到数据</string>
    <string name="poi_list_zai">在</string>
    <string name="poi_list_find_result">找到结果</string>
    <string name="common_image_save">保存到本地</string>
    <string name="common_image_operator">图片操作</string>
    <string name="common_start_download">开始下载</string>
    <string name="common_clound_city">护理工作间</string>
    <string name="common_save_local">保存图片到本地目录</string>
    <string name="common_load_timeout">网页加载超时</string>
    <!-- 登录 -->
    <string name="adr_input_phone">请输入手机号码</string>
    <string name="str_please_enter_the_verification_code">请输入验证码</string>
    <string name="activity_btn_verification">获取验证码</string>
    <string name="str_the_password_length">密码长度6至16位</string>
    <string name="str_confirm_new_password">确认新密码</string>
    <string name="str_login_password">登陆密码</string>
    <string name="str_input_password">输入登陆密码:</string>
    <string name="str_confirm_password">确认输入密码:</string>
    <string name="str_newpass">输入新密码</string>
    <string name="login">登  录</string>
    <string name="ensure">注  册</string>
    <string name="second_num">%s秒</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <!-- pdf阅读器 -->
    <string name="accept">接受</string>
    <string name="cancel">取消</string>
    <string name="cannot_open_buffer">无法打开缓冲器</string>
    <string name="cannot_open_document">无法打开文档</string>
    <string name="cannot_open_document_Reason">无法打开文档： %1$s</string>
    <string name="cannot_open_file_Path">无法打开文件：%1$s</string>
    <string name="choose_value">选择值</string>
    <string name="copied_to_clipboard">已复制到剪贴板</string>
    <string name="copy">复制</string>
    <string name="copy_text">复制文本</string>
    <string name="resetPaw">重置密码</string>
    <string name="copy_text_to_the_clipboard">将文本复制到剪贴板</string>
    <string name="delete">删除</string>
    <string name="dismiss">解除</string>
    <string name="document_has_changes_save_them_">文档已变更，保存变更吗？</string>
    <string name="draw_annotation">作批注</string>
    <string name="edit_annotations">编辑批注</string>
    <string name="enter_password">输入密码</string>
    <string name="entering_reflow_mode">输入重排模式</string>
    <string name="fill_out_text_field">填充文本字段</string>
    <string name="format_currently_not_supported">当前不支持此格式</string>
    <string name="highlight">高亮</string>
    <string name="ink">墨迹</string>
    <string name="leaving_reflow_mode">正在离开重排模式</string>
    <string name="more">更多</string>
    <string name="no">否</string>
    <string name="no_further_occurrences_found">未发现更多实例。</string>
    <string name="no_media_hint">存储介质在设备和 PC 上共同使用，会导致该存储介质在设备上无法被访问</string>
    <string name="no_media_warning">没有存储介质</string>
    <string name="no_text_selected">未选择文本</string>
    <string name="not_supported">不被支持</string>
    <string name="nothing_to_save">没有要保存的内容</string>
    <string name="okay">确定</string>
    <string name="outline_title">目录</string>
    <string name="parent_directory">[向上一级]</string>
    <string name="picker_title_App_Ver_Dir">%1$s%2$s:%3$s</string>
    <string name="print">打印</string>
    <string name="print_failed">未能打印</string>
    <string name="save">保\u3000存</string>
    <string name="search">搜索</string>
    <string name="search_backwards">向后搜索</string>
    <string name="search_document">搜索文档</string>
    <string name="search_forwards">向前搜索</string>
    <string name="searching_">正在搜索…</string>
    <string name="select">选择</string>
    <string name="select_text">选择文本</string>
    <string name="strike_out">删除线</string>
    <string name="text_not_found">未发现文本</string>
    <string name="toggle_links">高亮并启用墨迹</string>
    <string name="underline">下划线</string>
    <string name="yes">是</string>
    <!-- 关于我们 -->
    <string name="str_start_check_update">开始检查应用更新...</string>
    <string name="str_not_support_call">该设备不支持通话功能</string>
    <string name="str_start_download">开始下载...</string>
    <string name="str_version_update">版本有更新</string>
    <string name="str_version_updatetips1">检测到新版本</string>
    <string name="str_version_updatetips2">,是否更新?</string>
    <!-- 分享 -->
    <string name="str_tencent_web">腾讯微博</string>
    <string name="str_to_share">分享到</string>
    <string name="str_use_an_existing_account_to_comment">使用已有账号发表评论</string>
    <string name="str_qq_space">QQ空间</string>
    <string name="str_sina_web">新浪微博</string>
    <string name="str_renren">人人网</string>
    <string name="str_douban">豆瓣</string>
    <string name="str_anonymous_comments">匿名评论 \t</string>
    <string name="hk_company_cancel">取消</string>
    <string name="str_load_failed">网络加载失败，请点击重试。</string>
    <string name="str_pay_attention_to_the_official_web">关注官方微博</string>
    <string name="action_settings">Settings</string>
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="tooshort">录音时间过短</string>

    <!-- button string -->
    <string name="button_back">返回</string>
    <string name="button_commit">提交</string>
    <string name="button_share">分享</string>
    <string name="button_next">下一步</string>
    <!-- button string end -->


    <!-- activity untime string -->
    <string name="untime_survey">概况</string>
    <string name="untime_remark">现场反馈</string>
    <string name="untime_remark_write">反馈记录:</string>
    <string name="untime_beobserve">被观察者</string>
    <string name="untime_remark_write_hit">点击填写反馈记录</string>
    <string name="untime_remark_mac">选择手卫生用品与设施调查:</string>
    <string name="untime_remark_name_txt">科室被反馈人:</string>
    <string name="untime_remark_train_txt">是否培训过？</string>
    <string name="untime_remark_train_time">最近一次培训时间？</string>
    <string name="untime_remark_list_txt">不规范原因记录:</string>
    <string name="untime_remark_name_hit">点击填写科室被反馈人的姓名</string>
    <string name="untime_time_explain">点击备注，可以填写反馈信息。</string>
    <string name="untime_neurosurgery">神经外科</string>
    <string name="untime_hit_name">点击输入姓名</string>
    <string name="untime_hit_name_d">点击修改姓名</string>
    <string name="untime_time">时机</string>
    <string name="untime_dependence">依从性</string>
    <string name="untime_correct">正确数</string>
    <string name="untime_correct_rate">正确率</string>
    <string name="untime_time_week_two">二周内</string>
    <string name="untime_time_month_one">一月内</string>
    <string name="untime_time_month_three">三月内</string>
    <string name="untime_time_year_half">半年内</string>
    <string name="untime_time_year_one">一年内</string>
    <string name="untime_feedback_body">被反馈对象名称</string>
    <string name="untime_record_mac">手卫生用品与设施调查</string>
    <string name="record_disinfection_string">卫生手消毒</string>
    <string name="record_washhands_string">洗手</string>
    <string name="record_glove_string">戴手套</string>
    <string name="record_nothing_string">未采取措施</string>
    <string name="record_disinfection_str">卫生手消毒不规范记录</string>
    <string name="record_washhands_str">洗手不规范记录</string>
    <string name="record_glove_str">戴手套不规范记录</string>
    <string name="record_nothing_str">未采取措施不规范记录</string>
    <string name="untime_remark_write_str">反馈记录</string>
    <string name="cantnot_get_hospital_data">未接入\n数据</string>

    <!-- activity untime string end -->


    <!-- activity report string -->
    <string name="title_report">报表</string>
    <string name="button_email">发送邮件</string>
    <string name="report_email_write">填写邮箱</string>
    <string name="add_task">添加任务</string>
    <string name="report_email_hit">请填写您的邮箱</string>
    <string name="button_send">发送</string>
    <!-- activity report string end -->


    <!-- fragment calendar string -->
    <string name="text_add">添加</string>
    <string name="text_add1">添加督导</string>
    <string name="text_preinstall">预设</string>
    <string name="text_preinstall1">预设督导</string>
    <!-- fragment calendar string end -->
    <!-- 签到 -->
    <string name="sign_in">签到</string>

    <!-- edittext string -->
    <string name="text_phone">联系电话：</string>
    <string name="edt_hint_phone">请输入电话</string>
    <string name="edt_check_phone">请正确输入电话</string>
    <string name="text_linkman">联系人：</string>
    <string name="edt_hint_linkman">请输入姓名</string>
    <string name="edt_check_linkman">请正确输入姓名</string>
    <string name="text_addr">联系地址：</string>
    <string name="edt_hint_addr">请输入地址</string>
    <string name="edt_check_addr">请正确输入地址</string>
    <!-- edittext string end -->


    <!-- credit string -->
    <string name="credit_tel_str">全国免费咨询热线：</string>
    <string name="credit_tel">400-969-7756</string>
    <string name="credit_tel_under"><u>400-969-7756</u></string>
    <string name="credit_my">我的兑换</string>
    <string name="credit_title">橄榄兑换</string>
    <string name="credit_shop_btn">确定兑换</string>
    <string name="credit_shop_now">立即兑换</string>
    <string name="credit_shop_time">兑换时间：</string>
    <string name="credit_string">橄榄</string>
    <string name="fx_add_credit">分享（可获得%1$s橄榄）</string>
    <!-- credit string end -->
    <string name="operation_hint">点击添加按钮\n添加督导类型</string>
    <string name="title_activity_newbie_help">NewbieHelpActivity</string>
    
    <string name="click_answer">点击输入回答</string>

    - <!-- 认证 start
  -->
    <string name="register_uncheck">为保障用户数据安全，护理工作间均采用实名认证制，未实名认证用户将会限制部分功能，请尽快提交认证资料。</string>
    <string name="register_checking">感谢您的支持，工作人员将在1-2个工作日内进行资料审核，如需修改请致电客服电话：</string>
    <string name="register_checked_success">恭喜您！认证已通过审核，认证后资料不可修改，如需更新请致电客服电话：</string>
    <string name="register_checked_fail">您的实名认证资料不符合要求，请尽快上传符合要求的身份证明资料，工作人员会尽快审核并通知您结果，如有疑问请致电客服电话：</string>
    <string name="register_tip">软件功能仅对实名认证用户开放哦，请尽快进行认证，如有疑问请致电客服电话：400-969-7756。</string>
    <string name="register_checked_success_title">认证通过</string>
    <string name="register_checking_title">认证中</string>
    <string name="register_checked_fail_title">认证未通过</string>
    <string name="register_uncheck_title">用户未认证</string>
    - <!-- 认证 end
  -->

</resources>