<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
	 <LinearLayout
	     android:id="@+id/lay1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" />
	 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

     
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/report_email_write"
		    android:textColor="@color/black"
		    android:layout_marginLeft="10dp"
		    android:layout_marginTop="10dp"
		    android:textSize="16sp"
		    />
      	<EditText 
      	    android:id="@+id/edt_email_res"	
      	    android:layout_width="fill_parent"
      	    android:layout_height="wrap_content"
      	    android:hint="@string/report_email_hit"
      	    android:singleLine="true"
      	    android:padding="10dp"
      	    android:layout_margin="10dp"
      	    android:background="@drawable/big_lightblue_biankuang"
      	    />
		  <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dbdbdb" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/blue_" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:background="#dbdbdb" />

            <TextView
                android:id="@+id/btn_enter"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/button_send"
                android:textColor="@color/blue_" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>